# cryptenv

./: Cargo.toml  README.md
shells/: init.fish  init.zsh
src/: config.rs  main.rs  project.rs  store.rs
