[package]
name = "cryptenv"
version = "0.0.6"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
clap = { version = "4.5.16", features = ["derive"] }
dirs = "5.0.1"
itertools = "0.13.0"
keyring = { version = "3.2.1", features = ["apple-native"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
shellexpand = "3.1.0"
toml = "0.8.19"
zeroize = { version = "1.8.1", features = ["derive"] }
